found id error and included foreign key in migrations
